Add english translations for every sentences (almost)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,35 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  # Homepage & Nav
+  homepage_title: "You're going to find"
+  homepage_search: "Search"
+  login: "Login"
+  logout: "Logout"
+  profile: "Profile"
+  create_listing_nav: "Create my Listing"
+
+  # Login & Sign up
+  password: "Password"
+  password_confirmation: "Password confirmation"
+  remember_me: "Remember me"
+  login_sign_up: "Sign up"
+  
+  # Admin
+  my_profile: "My profile"
+  my_contacts: "My contacts"
+  my_messages: "My messages"
+  edit_user: "Edit User"
+  leave_blank: "(leave blank if you don't want to change it)"
+  current_password: "Current password"
+  update: "Update"
+  cancel: "Cancel my account"
+  remove: "Remove"
+
+  # Listing 
+  contact_seller: "Contact Seller"
+  create_listing: "Create Listing"
+  name_listing: "Name"
+  image_listing: "Image"
+  price_listing: "Price"
+  tags_listing: "Tags, Separate the tags with ';'"
